--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'com.galago.sprite'
-version '1.1'
+version '1.3.1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -13,7 +13,7 @@ repositories {
 }
 
 project.ext {
-    jmeVer = '3.3.0-stable'
+    jmeVer = '3.5.0-stable'
     dyn4jVer = '3.3.0'
 }
 
@@ -23,4 +23,8 @@ dependencies {
     implementation "org.jmonkeyengine:jme3-core:$jmeVer"
     implementation "org.jmonkeyengine:jme3-desktop:$jmeVer"
     implementation "org.dyn4j:dyn4j:$dyn4jVer"
+
+    // choose lwjgl 2 or 3
+    implementation "org.jmonkeyengine:jme3-lwjgl:$jmeVer"
+    // implementation "org.jmonkeyengine:jme3-lwjgl3:$jmeVer"
 }
